crates/validation/src/snapshots/validation__field_selection__tests__no_live_depth_0.snap
---
source: crates/validation/src/field_selection.rs
expression: snap
---
Snap {
    selects: [
        (
            "a_bool",
            GroupByKey,
        ),
        (
            "an_int",
            GroupByKey,
        ),
        (
            "flow_document",
            ConnectorRequiresLocation {
                reason: "",
            },
        ),
        (
            "nested",
            UserRequires,
        ),
    ],
    rejects: [
        (
            "_meta/before/forbid",
            ConnectorForbids {
                reason: "naughty",
            },
        ),
        (
            "an_extra",
            UserExcludes,
        ),
        (
            "forbid",
            ConnectorForbids {
                reason: "frosts the jib",
            },
        ),
    ],
    group_by: [
        "an_int",
        "a_bool",
    ],
    document: Some(
        "flow_document",
    ),
    field_outcomes: {
        "ABool": Right(
            DuplicateLocation,
        ),
        "ADateTime": Right(
            NotSelected,
        ),
        "AMap": Right(
            NotSelected,
        ),
        "ANumberOne": Right(
            NotSelected,
        ),
        "AnArray": Right(
            NotSelected,
        ),
        "AnInt": Right(
            DuplicateLocation,
        ),
        "NestedFoo": Right(
            CoveredLocation,
        ),
        "_meta": Right(
            NotSelected,
        ),
        "_meta/before": Right(
            NotSelected,
        ),
        "_meta/before/a_bool": Right(
            NotSelected,
        ),
        "_meta/before/a_date_time": Right(
            NotSelected,
        ),
        "_meta/before/a_map": Right(
            NotSelected,
        ),
        "_meta/before/a_num1": Right(
            NotSelected,
        ),
        "_meta/before/a_num2": Right(
            NotSelected,
        ),
        "_meta/before/an_array": Right(
            NotSelected,
        ),
        "_meta/before/an_array_redux": Right(
            NotSelected,
        ),
        "_meta/before/an_extra": Right(
            NotSelected,
        ),
        "_meta/before/an_int": Right(
            NotSelected,
        ),
        "_meta/before/forbid": Right(
            ConnectorForbids {
                reason: "naughty",
            },
        ),
        "_meta/before/nested": Right(
            NotSelected,
        ),
        "_meta/before/nested/bar": Right(
            NotSelected,
        ),
        "_meta/before/nested/baz": Right(
            NotSelected,
        ),
        "_meta/before/nested/foo": Right(
            NotSelected,
        ),
        "_meta/flow_truncated": Right(
            NotSelected,
        ),
        "_meta/op": Right(
            NotSelected,
        ),
        "_meta/source": Right(
            NotSelected,
        ),
        "_meta/source/loc": Right(
            NotSelected,
        ),
        "_meta/source/schema": Right(
            NotSelected,
        ),
        "_meta/source/snapshot": Right(
            NotSelected,
        ),
        "_meta/source/table": Right(
            NotSelected,
        ),
        "_meta/source/ts_ms": Right(
            NotSelected,
        ),
        "_meta/source/txid": Right(
            NotSelected,
        ),
        "a_bool": Left(
            GroupByKey,
        ),
        "a_date_time": Right(
            NotSelected,
        ),
        "a_map": Right(
            NotSelected,
        ),
        "a_num1": Right(
            NotSelected,
        ),
        "a_num2": Right(
            NotSelected,
        ),
        "an_array": Right(
            NotSelected,
        ),
        "an_array_redux": Right(
            NotSelected,
        ),
        "an_extra": Right(
            UserExcludes,
        ),
        "an_int": Left(
            GroupByKey,
        ),
        "flow_document": Left(
            ConnectorRequiresLocation {
                reason: "",
            },
        ),
        "flow_published_at": Right(
            NotSelected,
        ),
        "forbid": Right(
            ConnectorForbids {
                reason: "frosts the jib",
            },
        ),
        "nested": Left(
            UserRequires,
        ),
        "nested/bar": Right(
            CoveredLocation,
        ),
        "nested/baz": Right(
            CoveredLocation,
        ),
        "nested/foo": Right(
            CoveredLocation,
        ),
    },
    selection: FieldSelection {
        keys: [
            "an_int",
            "a_bool",
        ],
        values: [
            "nested",
        ],
        document: "flow_document",
        field_config_json_map: {
            "nested": "{\"cfg\":42}",
        },
    },
    conflicts: [],
}
