crates/validation/src/snapshots/validation__field_selection__tests__user_excludes_connector_requires_field.snap
---
source: crates/validation/src/field_selection.rs
expression: snap.conflicts
---
[
    "conflict for field \"an_extra\": field is required by the connector (i said so) but field is excluded by the user's field selection",
]
