crates/validation/src/snapshots/validation__field_selection__tests__user_requires_connector_forbids.snap
---
source: crates/validation/src/field_selection.rs
expression: snap.conflicts
---
[
    "conflict for field \"forbid\": field is required by the user's field selection but field is forbidden by the connector (frosts the jib)",
]
